Version 1
---------

Create a user model and add phpunit testing code

First Commit: 21307a61a699dcc8b9b8beeffa62adce187a6046

protected/config/main.php  -- Added database login credientals. This file is used by the web application
protected/config/console.php  -- Added database login credientals. This file is used whenever you run a migration from the commandline
protected/config/test.php  -- Added database login credientals. This file modifies main.php whenever phpunit is run
protected/migrate_all.sh -- Shell script to migrate main and test db

/var/www/Yii-Tutorial/protected$ ./yiic migrate create create_user_table

Yii Migration Tool v1.0 (based on Yii v1.1.13)

Create new migration '/var/www/Yii-Tutorial/protected/migrations/m130128_204446_create_user_table.php'? (yes|no) [no]:yes
New migration created successfully.


protected/runtime/gii-1.1.13/ModelCode.php -- I think this is a file that should be included in .gitignore.... not sure though
protected/models/User.php -- File generated by Gii. Goto this url 'http://localhost/Yii-Tutorial/index.php?r=gii/model' to generate this. The password is 'password', fill in 'user' for Table name, click preview, then generate.
protected/test/unit/user_model.php -- Added tests to ensure the model checks for password matching. Also added tests to ensure clear text passwords are not stored in the database, and removed from memory after they are saved
protected/test/unit/user_model.php -- Added tests to ensure the hashed password matches the original password when compared
protected/test/unit/user_model.php -- Refactored and corrected errors in the test.