@@ -1,0 +1,2 @@
+./yiic migrate redo
+./yiic migrate redo --connectionID=testdb
