@@ -23,3 +23,10 @@ protected/models/User.php -- File generated by Gii. Goto this url 'http://localh
 protected/test/unit/user_model.php -- Added tests to ensure the model checks for password matching. Also added tests to ensure clear text passwords are not stored in the database, and removed from memory after they are saved
 protected/test/unit/user_model.php -- Added tests to ensure the hashed password matches the original password when compared
 protected/test/unit/user_model.php -- Refactored and corrected errors in the test.
+
+protected/migrations/m130129_000236_increase_user_password_length.php -- Increased the password size to 60. All password hashes are 60 characters
+protected/models/User.php -- Added code to verify the password was 60 characters long. This should probably be removed as it may cause problems in the views
+												  -- Also added code to turn the password into a hash and a function to compare a password against the hash
+protected/extensions/Bcrypt.php -- Code to turn a password into a hash. I found this online and copied it without modification
+protected/config/main.php -- Added a line that will search the extension directory for helper classes, this allows us to use the bcrypt class
+protected/redo_migrations.sh -- Script file to automate redoing migrations for all databases
